--- a/scripts/mim18-19-volume-analyses.Rmd
+++ b/scripts/mim18-19-volume-analyses.Rmd
@@ -17,7 +17,7 @@ library(RColorBrewer)
 library(viridisLite)
 library(ggbeeswarm)
 
-source("00-paths.R")
+# source("00-paths.R")
 ```
 
 ## Data Processing
